--- a/style.css
+++ b/style.css
@@ -1,34 +1,68 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
+/* .navbar-brand {
+  color: green !important;
+} */
+
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.container {
-  text-align: center;
-  margin-top: 50px;
-}
-
-#color-box {
-  width: 200px;
-  height: 200px;
-  margin: 20px auto;
-  background-color: #3498db;
-  border: 2px solid #333;
-  border-radius: 10px;
-  transition: background-color 0.3s ease;
-}
-
-#change-color-btn {
-  padding: 10px 20px;
-  font-size: 16px;
+i {
+  font-size: 35px;
   cursor: pointer;
-  background-color: #2ecc71;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
+  margin: 0 10px;
+  color: black;
+}
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-#change-color-btn:hover {
-  background-color: #27ae60;
+.shopping-card-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #e7e7e7;
+  border-radius: 10px;
+  padding: 3%;
+  margin: 50px 0;
+}
+.total-price span {
+  font-size: 30px;
+}
+
+.total {
+  font-weight: bold;
+}
+.list-products {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+  width: 70%;
+}
+.card {
+  padding: 5%;
+}
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.quantity {
+  font-size: 25px;
+}
+
+.card-body div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 25px;
+}
+
+.fa-trash-alt {
+  color: #de6b5c;
 }
